--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="container">
     <div class="image">
-      <img src="dhoni2.jpg" alt="MS Dhoni">
+      <img src="MSDHONIpic.jpg" alt="MS Dhoni">
     </div>
 
     <div>
